--- a/DreamLuso.Presentation/DreamLuso.Presentation/src/app/components/back-office/Pages/Agent/Pages/chat-agent/chat-agent.component.html
+++ b/DreamLuso.Presentation/DreamLuso.Presentation/src/app/components/back-office/Pages/Agent/Pages/chat-agent/chat-agent.component.html
@@ -1,8 +1,8 @@
-<div class="flex h-screen bg-white font-sans overflow-hidden">
+<div class="flex h-screen bg-white font-sans overflow-hidden w-full">
   <app-dashboard-sidebar-agent [loggedUserDetails]="loggedUserDetails"></app-dashboard-sidebar-agent>
 
   <div class="flex-1 ml-64 lg:ml-[25%] xl:ml-[20%] 2xl:ml-[15%] p-4">
-    <div class="chat-container">
+    <div class="chat-container ">
       <div class="chat-list">
         <div class="chat-header-section">
           <h2 class="text-2xl font-bold text-neutral-800">Messages</h2>
